k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rest
    service: api-rest
  name: rest-service
  namespace: nico-rest
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: rest
  sessionAffinity: None
  type: ClusterIP
