k8s/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rest-netowork-policy
  namespace: nico-rest
spec:
  podSelector:
    matchLabels:
      app: rest
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: rest
      ports:
        - protocol: TCP
          port: 80
